fixtures/cs-rng-01/bad/password-reset-otp.ts
export function createOtp() {
	return Math.random().toString().slice(2, 8);
}
